--- a/css/styles.css
+++ b/css/styles.css
@@ -392,7 +392,7 @@ a {
 }
 .nav .nav-link:hover {
   color: #fff;
-  background-color: #58e1c1;
+  background-color: #99edd9;
   transition-duration: 0.6s;
 }
 
@@ -420,6 +420,31 @@ a {
     margin-right: initial;
   }
 }
+.img-avatar {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.img-frame {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  max-width: 100%;
+  padding: 13px;
+  border: 1px solid #ccc;
+}
+
+.img-logo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .container {
   padding: 0 10px;
 }
@@ -568,20 +593,34 @@ a {
 .btn.default {
   background-color: #51ddfc;
 }
+.btn.default:hover {
+  background-color: #9cecfd;
+}
 .btn.error {
   background-color: #e4757a;
+}
+.btn.error:hover {
+  background-color: #f1b5b8;
 }
 .btn.info {
   background-color: #927bc1;
 }
+.btn.info:hover {
+  background-color: #bdafd9;
+}
 .btn.success {
   background-color: #63cc82;
+}
+.btn.success:hover {
+  background-color: #9ddfb0;
 }
 .btn.warning {
   background-color: #fd7856;
 }
+.btn.warning:hover {
+  background-color: #feb4a2;
+}
 .btn:hover {
-  background-color: #9cecfd;
   transition-duration: 0.6s;
 }
 
