--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -14,7 +14,7 @@
 
       &:hover {
         color: #fff;
-        background-color: $primary-color;
+        background-color: $primary-color-lighten;
         transition-duration: .6s;
       }
   }
